testcases/negative/insert-textbox-missing-required.otk
OFFICETALK/1.0
DOCTYPE powerpoint

AT slide[1]
INSERT TEXTBOX width=200pt height=100pt
